# genshin_resin_api

./: README.md  pyproject.toml
src/: get_resin.py  get_status.py  server.py
