[tool.poetry]
name = "genshin-resin-api"
version = "0.1.0"
description = ""
authors = ["syuuma-ito <itosyuuma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
genshin = "^1.6.1"
rich = "^13.6.0"
fastapi = "^0.104.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
start = 'uvicorn server:app --host 0.0.0.0 --port 10000 --app-dir ./src'
dev = 'uvicorn server:app --reload  --app-dir ./src'
req = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
